tests/semantic/pass/function1.c
void f(int a) {
   if (a == 1)
     return;
   {
     char a;
     a = 'c';
   }
   return;
}
