tests/semantic/fail/condition_undefined_variable2.c
int main(void) {
  if(sizeof(a)) {;}
}
